Fix: font size on mobile

--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ li:nth-child(4):hover {
     text-align: right;
     position: absolute;
     z-index: 30;
-    left: 350px;
+    left: 21.875rem;
 }
 
 .project-writeup h2 {
@@ -379,7 +379,7 @@ li:nth-child(4):hover {
     color: var(--text-clr);
     font-weight: 600;
     transition: color 0.2s linear 0s;
-    width: 10px;
+    width: 0.625rem;
 }
 
 .project-writeup a:hover {
@@ -388,15 +388,15 @@ li:nth-child(4):hover {
 
 .paragraph-container {
     background-color: #112340;
-    padding: 25px;
+    padding: 1.5625em;
     margin-top: 1.25rem;
     margin-bottom: 1.9375rem;
-    min-width: 550px;
+    min-width: 34.375rem;
 }
 
 .paragraph-container p {
     font-size: 1.125rem;
-    line-height: 30px;
+    line-height: 1.875rem;
 }
 
 .github-link {
@@ -405,12 +405,12 @@ li:nth-child(4):hover {
 }
 
 .github-link>a {
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .project-writeup .lang-used {
     display: flex;
-    gap: 15px;
+    gap: 0.9375rem;
     font-size: 0.9rem;
     font-family: "Fira Code", monospace;
     justify-content: flex-end;
@@ -457,7 +457,7 @@ li:nth-child(4):hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 180px;
+    padding-top: 11.25rem;
 }
 
 #contact-section h2 {
@@ -592,89 +592,95 @@ footer:hover {
 @media screen and (max-width: 31.25rem) {
     #intro-section {
         padding: 0;
-        margin: 320px 0;
+        margin: 20rem 0;
     }
     .intro {
-        font-size: 20px;
+        /* font-size: 1.25rem; */
+        font-size: 2.25rem;
     }
     .name {
-        font-size: 44px;
+        /* font-size: 2.75rem; */
+        font-size: 4rem;
     }
     .job-desc {
-        font-size: 44px;
+        /* font-size: 2.75rem; */
+        font-size: 4rem;
         margin-top: 0.8rem;
     }
     .other-desc {
         font-weight: 400;
-        font-size: 22px;
-        line-height: 2.2rem;
+        /* font-size: 1.375rem; */
+        font-size: 2rem;
+        line-height: 3rem;
+        margin-top: 1.2rem;
     }
     button>a {
-        font-size: 18px;
+        font-size: 1.4rem;
     }
     nav>.nav-container>ul {
-        font-size: 18px;
+        /* font-size: 1.125rem; */
+        font-size: 1.4rem;
     }
     .about-me-header {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
     .about-me-header>span {
-        font-size: 26px;
+        font-size: 1.625rem;
         font-family: "Fira Code", monospace;
-        margin-right: 8px;
+        margin-right: 0.5rem;
     }
     .about-me-para {
         font-weight: 400;
-        font-size: 22px;
+        font-size: 1.375rem;
         line-height: 2.2rem;
     }
     .projects-header {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
     .projects-header>span {
-        font-size: 26px;
+        font-size: 1.625rem;
         font-family: "Fira Code", monospace;
-        margin-right: 8px;
+        margin-right: 0.5rem;
     }
     .project-writeup>h2 {
-        font-size: 15px;
+        font-size: 0.9375rem;
     }
     .project-writeup .paragraph-container {
         font-weight: 400;
-        font-size: 22px;
+        font-size: 1.375rem;
         line-height: 2.2rem;
     }
     .lang-used {
-        font-size: 15px;
+        font-size: 0.9375rem;
     }
     .project-writeup .github-link {
         padding-top: 0;
         /* margin: 0 15px 0 0; */
     }
     .project-writeup .github-link>a {
-        font-size: 15px;
+        font-size: 0.9375rem;
     }
     .other-projects>h2 {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
     .other-projects-container .project-container {
-        padding: 30px 46px;
+        padding: 1.875rem 2.875rem;
     }
     .other-projects>a {
-        font-size: 15px;
+        font-size: 0.9375rem;
     }
     .project-container {
         width: 35rem;
     }
     .project-container>h3 {
-        font-size: 30px;
+        font-size: 1.875rem;
         line-height: 3rem;
     }
     .other-projects-container .project-container>p {
-        font-size: 22px;
+        font-size: 1.375rem;
     }
     #contact-section>p {
-        font-size: 22px;
+        font-size: 1.375rem;
         font-weight: 400;
     }
     footer {
